ADD:0.9_beta，增加自动启动浏览器，初步认证；